add search product summary